srfi-14: Add missing char-sets to export list
git-svn-id: http://code.call-cc.org/svn/chicken-eggs/release/5/srfi-14/trunk@32275 fca3e652-9b03-0410-8d7b-ac86a6ce46c4

--- a/srfi-14.wiki
+++ b/srfi-14.wiki
@@ -1000,4 +1000,5 @@ preserves its copyright:
 
 === Version History
 
+; 1.1 : Add missing char-sets to export list.
 ; 1.0 : Taken from the srfi-14 core library unit and released as an egg for CHICKEN 5.
